# TdT

./: .env  .gitignore  README.md  demo_agent_full.py  demo_llm_agent.py  demo_real_agent.py  pyproject.toml  test_cn202210107337.py
Patents/: TdT Enzyme used in EDS 20250517.xlsx  patent rules.xlsx
Patents/TDT专利序列/: CN107567501B.FASTA  CN109477080A.FASTA  CN110331136B.FASTA  CN110997907A.FASTA  CN112105725A.FASTA  CN112746063B.FASTA  CN113302289A.FASTA  CN113423840B.FASTA  CN113423841A.FASTA  CN113454212A.FASTA  CN114207140A.FASTA  CN114410602B.FASTA  CN114729389B.FASTA  CN114761575A.FASTA  CN114787346A.FASTA  CN114921436B.FASTA  CN115135770A.FASTA  CN115427559A.FASTA  CN115916967A.FASTA  CN116075593A.FASTA  CN116096872A.FASTA  CN116478955A.FASTA  CN116555216A.FASTA  CN116622744A.FASTA  CN116716273B.FASTA  CN116836955B.FASTA  CN117757768A.FASTA  CN117887685A.FASTA  CN118126982B.FASTA  CN118234853A.FASTA  CN118256467B.FASTA  CN118910000A.FASTA  CN118995661A.FASTA  CN119040294A.FASTA  CN119193526A.FASTA  CN119506242A.FASTA  CN119570761A.FASTA  CN119662594A.FASTA  CN119979498A.FASTA  EP3744854A1.FASTA  (+18 more)
docs/: agent_system_improvement_requirements.md  llm_agent_analysis_quality_issue.md  pdf_parsing_discussion.md  sequence_processor_design.md  sequence_rule_extraction_strategy.md
examples/md/: CN118284690A_claims.md  CN202210107337_claims.md
examples/seq/: CN202210107337.FASTA
output/: CN118284690A_claims.md  CN202210107337_FullTextImage_claims.md  CN202210107337_claims.md
output/markdowns/: CN118284690A_claims.md  CN202210107337_claims.md
src/tdt/: __init__.py  (+3 more)
(+36 files in other folders)
