[project]
name = "tdt-parser"
version = "0.1.0"
description = "TDT酶专利序列提取工具 - 从专利PDF文件中提取权利要求书内容"
readme = "README.md"
authors = [
    { name = "Jieke", email = "jieke.jack.wu@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.11.0",
    "click>=8.1.0",
    "pathlib>=1.0.1",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.scripts]
tdt-extract = "tdt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tdt"]
